# AutoCFP

./: .gitignore  README.md  pyproject.toml  serve.sh
.github/workflows/: update-cfp.yml
data/: conferences_base.json  conferences_with_cfp.json
public/: index.html
public/css/: style.css
public/data/: conferences_base.json  conferences_with_cfp.json
public/js/: calendar.js
scripts/: parse_conferences.py  scrape_cfp.py
