[project]
name = "auto-cfp"
version = "0.1.0"
description = "Conference Deadline Calendar - 学会の論文投稿締切と開催日程を可視化するWebアプリケーション"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[tool.uv]
package = false
